--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://YOUR-GITHUB-USERNAME.github.io/sujan-timalsina-portfolio",
   "name": "sujan-timalsina-portfolio",
   "private": true,
   "version": "0.0.0",
@@ -11,7 +12,8 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "lucide-react": "^0.555.0"
+    "lucide-react": "^0.555.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
