Final configuration for base path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://YOUR-GITHUB-USERNAME.github.io/sujan-timalsina-portfolio",
+  "homepage": "https://timalsinasujan.github.io/sujan-timalsina-portfolio",
   "name": "sujan-timalsina-portfolio",
   "private": true,
   "version": "0.0.0",
